--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,14 +5,10 @@
 		"*.fs": "cpp"
 	},
 	"files.trimTrailingWhitespace": false,
-	"editor.fontSize": 20,
 	"editor.autoIndent": false,
 	"editor.detectIndentation": false,
 	"editor.renderWhitespace": "all",
 	"editor.insertSpaces": false,
 	"editor.minimap.enabled": false,
-	"editor.autoClosingBrackets": false,
-	"editor.formatOnType": false,
-	"editor.acceptSuggestionOnEnter": "off",
-	"editor.acceptSuggestionOnCommitCharacter": false,
+	"editor.formatOnType": false
 }
